# hare_tortoise_clock

./: .gitignore  CMakeLists.txt  LICENSE  README.md  index.html  sdkconfig.defaults
docs/: hare_tortoise_clock_drawing.FCStd  hare_tortoise_clock_hands.FCStd  hare_tortoise_clock_sticker.psd  rabbit_clock_drawing.FCStd  rabbit_clock_hands.FCStd
main/: CMakeLists.txt  Kconfig.projbuild  ble_device.cc  ble_device.h  ble_service_task.cc  ble_service_task.h  ble_services.cc  ble_services.h  clock_management_task.cc  clock_management_task.h  clock_status.h  gpio_control.cc  gpio_control.h  gptimer.h  hare_tortoise_clock.cc  hare_tortoise_clock.h  hare_tortoise_clock_interface.h  logger.cc  logger.h  main.cc  message_queue.h  rabbit_clock.cc  rabbit_clock.h  rabbit_clock_interface.h  stepper_motor_controller.cc  stepper_motor_controller.h  stepper_motor_task.cc  stepper_motor_task.h  stepper_motor_util.cc  stepper_motor_util.h  task.cc  task.h  util.cc  util.h  version.h.in
web_client/: index.html  style.css
